# opengl

Exercise_codes/: exercise1.cpp  exercise2.cpp  exersice3.cpp  shader.h  window.cpp
Exercise_codes/coordinates/: cordinate.cpp  vertex_shader_coor.vs
Exercise_codes/include/: shader.h
Exercise_codes/src/: shader.cpp
Exercise_codes/texture/: fragment_shader_tex.fs
Learn_Opengl/: Hello_triangle_ex3.cpp  fragment_shader.fs  vertex_shader.vs
Learn_Opengl/Car_game/: CMakeLists.txt
Learn_Opengl/Car_game/include/: shader.h
Learn_Opengl/Car_game/shaders/: fragment_shader.fs
Learn_Opengl/Car_game/src/: main.cpp  shader.cpp
Learn_Opengl/camera/: CMakeLists.txt  camera_1.cpp  camera_2.cpp  fragment_shader_tex.fs
Learn_Opengl/coordinates/: CMakeLists.txt
Learn_Opengl/include/: camera.h  shader.h
Learn_Opengl/rotation/: CMakeLists.txt  rotation_ex.cpp
Learn_Opengl/src/: camera.cpp  shader.cpp
Learn_Opengl/texture/: CMakeLists.txt  texture_ex.cpp  vertex_shader_tex.vs
include/glad/: glad.h
src/: glad.c
